# InterCooperative-Network-Node

./: .gitmodules  CHANGELOG.md  Cargo.toml  NEW_PROJECT_STRUCTURE.txt  PROJECT_STRUCTURE_AND_CODE_CONTENTS.txt  README.md  cert.crt  cert.pem  cliff.toml  commit_message.txt  config.toml  generate_project_state.sh  key.pem  manage_project.sh  private.key  project_core_files.txt  project_state.txt  project_structure.txt  test_cert.crt  test_cert.key  test_cert.p12  update_project.sh
config/: default.toml  default_config.toml
crates/icn_common/src/: error.rs  lib.rs
crates/icn_core/src/: lib.rs
crates/icn_federation/: Cargo.toml
crates/icn_federation/src/: federation.rs
crates/icn_network/src/: lib.rs
icn_api/: Cargo.toml
icn_blockchain/: Cargo.toml
icn_blockchain/src/: lib.rs
icn_blockchain/src/block/: mod.rs
icn_blockchain/src/chain/: mod.rs
icn_blockchain/src/transaction/: mod.rs  transaction.rs  transaction_type.rs
icn_consensus/: Cargo.toml
icn_consensus/src/: consensus.rs  lib.rs  proof_of_cooperation.rs
icn_core/: Cargo.toml
icn_core/src/: errors.rs  lib.rs  main.rs
icn_core/src/config/: config_loader.rs  mod.rs
icn_core/src/coordinator/: mod.rs  module_coordinator.rs
icn_core/src/node/: mod.rs  node_manager.rs
icn_governance/: Cargo.toml
icn_governance/src/: lib.rs
icn_identity/: Cargo.toml
icn_identity/src/: lib.rs
icn_networking/: Cargo.toml
icn_networking/src/: lib.rs
icn_repos/icn_blockchain/: Cargo.toml
icn_repos/icn_common/src/: error.rs
icn_repos/icn_consensus/: Cargo.toml
icn_repos/icn_core/src/: lib.rs
icn_repos/icn_currency/: Cargo.toml  README.md
icn_repos/icn_dao/: README.md
icn_repos/icn_demo/: Cargo.toml  README.md
icn_repos/icn_federation/: README.md
icn_repos/icn_governance/: README.md
icn_repos/icn_governance/src/: lib.rs
icn_repos/icn_incentives/: Cargo.toml  README.md
icn_repos/icn_language/: Cargo.toml
icn_repos/icn_market/: README.md
icn_repos/icn_network/: Cargo.toml
icn_repos/icn_reputation/: README.md
icn_repos/icn_sharding/: Cargo.toml  README.md
icn_repos/icn_smart_contracts/: Cargo.toml  README.md
icn_repos/icn_storage/: README.md
icn_repos/icn_testnet/: Cargo.toml  README.md
icn_repos/icn_zkp/: Cargo.toml
icn_shared/: Cargo.toml
icn_shared/src/: block.rs  error.rs  lib.rs
icn_smart_contracts/: Cargo.toml
icn_smart_contracts/src/: compiler.rs  lib.rs  smart_contract.rs  standard_library.rs
icn_storage/: Cargo.toml
icn_storage/src/: block_storage.rs  lib.rs  state_storage.rs
icn_virtual_machine/: Cargo.toml
icn_virtual_machine/src/: bytecode.rs  execution_engine.rs  lib.rs  mod.rs  plugin_manager.rs  resource_manager.rs  security_manager.rs  state_manager.rs
src/: cross_shard_transaction_manager.rs  lib.rs  smart_contract.rs
