# icn_blockchain/Cargo.toml

[package]
name = "icn_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_shared = { path = "../icn_shared" }
icn_consensus = { path = "../icn_consensus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
log = "0.4"
rand = "0.8"
thiserror = "1.0"  # For better error handling within the VM and blockchain

# Dependency for Virtual Machine and smart contract functionality
icn_virtual_machine = { path = "../icn_virtual_machine" }  # Added this line for the VirtualMachine module dependency

# WebAssembly runtime for executing smart contracts in the VM
wasmer = "2.1"
