[package]
name = "icn_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
config = "0.13"
env_logger = "0.10"
icn_consensus = { path = "../icn_consensus" }
icn_identity = { path = "../icn_identity" }
icn_governance = { path = "../icn_governance" }
icn_blockchain = { path = "../icn_blockchain" }
icn_smart_contracts = { path = "../icn_smart_contracts" }
icn_networking = { path = "../icn_networking" }
log = "0.4"
log = "0.4"
env_logger = "0.9"
