[package]
name = "icn_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.2"
native-tls = "0.2"
tokio = { version = "1.28", features = ["full"] }
config = "0.13"
env_logger = "0.10"
log = "0.4"
icn_consensus = { path = "../icn_consensus" }
icn_blockchain = { path = "../icn_blockchain" }
icn_identity = { path = "../icn_identity" }
icn_governance = { path = "../icn_governance" }
icn_networking = { path = "../icn_networking" }
icn_shared = { path = "../icn_shared" }
toml = "0.5"
