[package]
name = "icn_federation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
icn_common = { path = "../icn_common" } # Adjust the path according to your project structure

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
